index.css
body {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
}
.dark {
  background-color: #111;
  color: #ddd;
  color-scheme: dark;
}

b {
  font-weight: bold;
}
a {
  cursor: pointer;
  color: #25d;
  text-decoration: underline;
}
a:visited {
  color: #73c;
}
a:active {
  color: #03a;
}
.dark a {
  color: #4af;
}
.dark a:visited {
  color: #b381ef;
}
.dark a:active {
  color: #58f;
}

input[disabled] {
  cursor: not-allowed;
}

#app {
  width: 480px;
  margin: 24px auto 0;
  padding-bottom: 24px;
}

.title {
  margin: 16px 0 0;
  position: relative;
}

.url {
  position: relative;
  background: 0;
  border: 0;
  margin: 0;
  padding: 0 0 0 32px;
  outline: 0;
  font-size: 23px;
  line-height: 32px;
  display: block;
  width: 100%;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: rgba(0, 0, 0, .4);
  font-family: inherit;
}
.url:focus {
  color: #000;
}
.url:focus ~ .project-link {
  opacity: 1;
}
.dark .url {
  color: rgba(255, 255, 255, .4);
}
.dark .url:focus {
  color: #fff;
}

.player-progress {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}
.project-link {
  position: absolute;
  top: 0;
  left: 0;
  background-position: -192px 0;
}
.project-link:active {
  opacity: 1;
}
.dark .project-link {
  background-position-y: -32px;
}

.area {
  overflow: hidden;
  margin: 0 -24px;
  padding: 0 24px;
  -webkit-transition: height .2s;
  -o-transition: height .2s;
  -moz-transition: height .2s;
  transition: height .2s;
}
#player-area, #project-area {
  height: 0;
}
.player-stage {
  width: 480px;
  height: 360px;
}

.project-link {
  width: 32px;
  height: 32px;
  float: right;
  cursor: pointer;
  text-align: center;
  opacity: .4;
  background-image: url(icons.svg);
  text-decoration: none;
}

section {
  margin: 24px 0;
}
footer {
  font-size: small;
  opacity: 0.75;
}
footer a {
  color: inherit !important;
}
h1, p, ul, footer {
  margin: 0 0 16px;
}
h1 {
  font-size: 24px;
  line-height: 32px;
  font-weight: normal;
  margin: 16px 0 0;
}
h1.title {
  font-size: 54px;
  line-height: 72px;
  margin: 0;
}
code {
  font: 12px Menlo, Monaco, Consolas, Courier New, monospace;
  background: #f5f5f5;
  border-radius: 3px;
  padding: 3px;
  color: #000;
}

#package-link {
  padding: 2px 8px;
  background: linear-gradient(#fafafa, #e8e8e8);
  box-shadow:
    0 0 0 1px rgba(0, 0, 0, .35),
    0 1px 4px rgba(0, 0, 0, .2);
  border-radius: 3px;
  cursor: pointer;
  color: #000;
  text-decoration: none;
  width: 64px;
  text-align: center;
}
#package-link:hover {
  background: linear-gradient(#fff, #eaeaea);
  box-shadow:
    0 0 0 1px rgba(0, 0, 0, .4),
    0 1px 4px rgba(0, 0, 0, .3);
}
#package-link:active {
  background: linear-gradient(#ddd, #eaeaea);
  box-shadow:
    0 0 0 1px rgba(0, 0, 0, .5),
    inset 0 2px 5px rgba(0, 0, 0, .15);
}
#package-other-width, #package-other-height, #embed-other-width, #embed-other-height {
  width: 55px;
  margin: 0;
}
.package-other-divider {
  margin: 0 -2px;
  pointer-events: none;
}
.package input[type=checkbox] {
  margin: 0 0 0 12px;
}
#embed-code {
  background-color: white;
  color: rgba(0, 0, 0, .8);
  border: 1px solid rgba(0, 0, 0, .4);
  margin: 0;
  padding: 4px;
  outline: 0;
  width: 80px;
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  font-family: monospace;
}
.dark #embed-code {
  border-color: rgba(255, 255, 255, .4);
}
.package-options > *, .embed-options > * {
  display: inline-block;
  vertical-align: middle;
}

/* Theme changer */
.theme-select {
  position: absolute;
  left: 5px;
  top: 5px;
  opacity: 0.5;
  -webkit-transition: opacity .2s;
  -o-transition: opacity .2s;
  -moz-transition: opacity .2s;
  transition: opacity 0.2s;
}
.theme-select:hover {
  opacity: 1;
}

/* File selector */
.upload-button {
  position: relative;
}
#upload-file-input {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  cursor: pointer;
}

/* Settings menu */
#settings {
  width: 100%;
}
#settings input {
  font: inherit;
  padding: 0;
  border: 0;
  width: 100%;
  background: transparent;
  color: inherit;
}
#settings input::placeholder {
  color: inherit;
  opacity: .4;
}
#settings, #settings tr, #settings td {
  border-collapse: collapse;
  padding: 0;
  margin: 0;
  border: 1px solid #555;
}
#settings .name {
  text-align: center;
  width: 175px;
}
#settings .value {
  background-color: #e8e8e8;
  padding: 0 1px;
}
.dark #settings .value {
  background-color: #282828;
}
#settings input {
  -webkit-transition: box-shadow .2s;
  -o-transition: box-shadow .2s;
  -moz-transition: box-shadow .2s;
  transition: box-shadow .2s;
}
/* style invalid inputs without making an ugly mess of things */
#settings input:invalid {
  /* box-shadow is used to modify border and background color because the background/opacity/border styles don't work very well in chrome */
  box-shadow: inset 0 0 0 24px rgba(255, 0, 0, 0.2), 0 0 0 2px #ff6262;
}

.advanced input[type=checkbox] {
  margin-left: 12px;
}

.player-root:not([fullscreen]) .player-stage {
  outline: 1px solid rgba(0, 0, 0, .4);
  margin-bottom: 1px;
}

#examples-container {
  height: 0;
  overflow: hidden;
}
#examples-view {
  height: 310px;
}
#examples-footer {
  font-size: 0.8em;
  color: rgb(127, 127, 127);
}

#unshared-projects h1 {
  padding-top: 16px;
}
#unshared-projects p {
  margin-bottom: 4px;
}

